--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Angular7QuickStart-three": {
+    "Angular7QuickStart-two": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Angular7QuickStart-three",
+            "outputPath": "dist/Angular7QuickStart-two",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Angular7QuickStart-three:build"
+            "browserTarget": "Angular7QuickStart-two:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Angular7QuickStart-three:build:production"
+              "browserTarget": "Angular7QuickStart-two:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Angular7QuickStart-three:build"
+            "browserTarget": "Angular7QuickStart-two:build"
           }
         },
         "test": {
@@ -110,18 +110,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Angular7QuickStart-three:serve"
+            "devServerTarget": "Angular7QuickStart-two:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Angular7QuickStart-three:serve:production"
+              "devServerTarget": "Angular7QuickStart-two:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Angular7QuickStart-three",
+  "defaultProject": "Angular7QuickStart-two",
   "cli": {
     "analytics": false
   }
